--- a/estilo.css
+++ b/estilo.css
@@ -5,27 +5,6 @@ header {
     position: relative;
 }
 
-@media (max-width: 500px) {
-    body {
-        background-color: white;
-    }
-    #box-left {
-        clear: both;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 350px;
-        width: 40%;
-    }
-    
-    #box-right {
-        float: left;
-        width: 60%;
-        position: relative;
-        height: 350px;
-        padding-top: 20px;
-    }
-}
-
 #cabecalho {
     width: 480px;
     position: relative;
@@ -384,5 +363,85 @@ header {
         height: 75px;
         background: blue;
         border-radius: 10px;
+    }
+}
+
+@media (max-width: 500px) {
+    header {
+        height: 250px;
+    }
+    #cabecalho {
+        border: 1px solid red;
+        width: 380px;
+        position: relative;
+        top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        height: 200px;
+    }
+    
+    #container {
+        border: 1px solid yellow;
+        float: left;
+        width: 120px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    #logo {
+        width: 120px;
+        height: 120px;
+        background-color: #470066;
+        border-radius: 60px;
+        position: relative;
+        top: 10px;
+        text-align: center;
+        line-height: 120px;
+    }
+    
+    #logo:hover {
+        width: -10px;
+        background-color: white;
+        transition: all 0.5s;
+    }
+    
+    #photo {
+        position: relative;
+        top: -2px;
+        width: 110px;
+        height: 110px;
+        border-radius: 55px;
+    }
+    
+    #welcome {
+        border: 1px solid green;
+        position: relative;
+        top: 45px;
+        float: right;
+        text-align: center;
+        font-size: 13px;
+    }
+    #box-left {
+        display: flex;
+        position: relative;
+        top: 350px;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 350px;
+        width: 40%;
+        z-index: 1;
+    }
+
+    #box-right {
+        z-index: 0;
+        top: -50px;
+        position: relative;
+        width: 50%;
+        height: 350px;
+        padding-top: 20px;
+    }
+
+    #others {
+        position: relative;
     }
 }
