--- a/estilo.css
+++ b/estilo.css
@@ -152,7 +152,7 @@ header {
 }
 
 .accordion-up {
-    background-color: #660066 !important;
+    background-color: #000033 !important;
     color: white !important;
 }
 .accordion-down {
@@ -371,7 +371,6 @@ header {
         height: 250px;
     }
     #cabecalho {
-        border: 1px solid red;
         width: 380px;
         position: relative;
         top: 20px;
@@ -381,7 +380,6 @@ header {
     }
     
     #container {
-        border: 1px solid yellow;
         float: left;
         width: 120px;
         margin-left: auto;
@@ -414,7 +412,6 @@ header {
     }
     
     #welcome {
-        border: 1px solid green;
         position: relative;
         top: 45px;
         float: right;
@@ -424,24 +421,134 @@ header {
     #box-left {
         display: flex;
         position: relative;
-        top: 350px;
+        top: 500px;
         flex-direction: column;
         justify-content: space-between;
         height: 350px;
         width: 40%;
-        z-index: 1;
     }
 
     #box-right {
-        z-index: 0;
-        top: -50px;
-        position: relative;
-        width: 50%;
+        position: absolute;
+        top: 220px;
+        width: 380px;
         height: 350px;
         padding-top: 20px;
     }
 
-    #others {
-        position: relative;
+    @keyframes html {
+        from {
+            width: 100px;
+            height: 75px;
+            background: red;
+            border-radius: 10px;
+        }
+        to {
+            border-radius: 10px 50px 50px 10px;
+            background: red;
+            width: 350px;
+            height: 75px;
+        }
+    }
+    @keyframes html-inverse {
+        from {
+            border-radius: 10px 50px 50px 10px;
+            background: red;
+            width: 350px;
+            height: 75px;
+        }
+        to {
+            width: 100px;
+            height: 75px;
+            background: red;
+            border-radius: 10px;
+        }
+    }
+
+    @keyframes css {
+        from {
+            width: 100px;
+            height: 75px;
+            background: #00cccc;
+            border-radius: 10px;
+        }
+        to {
+            border-radius: 10px 50px 50px 10px;
+            background: #00cccc;
+            width: 350px;
+            height: 75px;
+        }
+    }
+    @keyframes css-inverse {
+        from {
+            border-radius: 10px 50px 50px 10px;
+            background: #00cccc;
+            width: 350px;
+            height: 75px;
+        }
+        to {
+            width: 100px;
+            height: 75px;
+            background: #00cccc;
+            border-radius: 10px;
+        }
+    }
+    
+    @keyframes js {
+        from {
+            width: 100px;
+            height: 75px;
+            background: yellow;
+            border-radius: 10px;
+        }
+        to {
+            border-radius: 10px 50px 50px 10px;
+            background: yellow;
+            width: 350px;
+            height: 75px;
+        }
+    }
+    @keyframes js-inverse {
+        from {
+            border-radius: 10px 50px 50px 10px;
+            background: yellow;
+            width: 350px;
+            height: 75px;
+        }
+        to {
+            width: 100px;
+            height: 75px;
+            background: yellow;
+            border-radius: 10px;
+        }
+    }
+    
+    @keyframes boot {
+        from {
+            width: 100px;
+            height: 75px;
+            background: blue;
+            border-radius: 10px;
+        }
+        to {
+            border-radius: 10px 50px 50px 10px;
+            background: blue;
+            width: 350px;
+            height: 75px;
+        }
+    }
+    @keyframes boot-inverse {
+        from {
+            border-radius: 10px 50px 50px 10px;
+            background: blue;
+            width: 350px;
+            height: 75px;
+        }
+        to {
+            width: 100px;
+            height: 75px;
+            background: blue;
+            border-radius: 10px;
+        }
     }
 }
