corrigindo responssividade mobile

--- a/estilo.css
+++ b/estilo.css
@@ -54,6 +54,20 @@ header {
     font-size: 15px;
 }
 
+#contato {
+    width: 120px;
+    position: relative;
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+}
+
+#contato img {
+    width: 20px;
+    height: 20px;
+}
+
 #box-html,
 #box-css,
 #box-js,
@@ -395,6 +409,53 @@ header {
     header {
         height: 250px;
     }
+
+    #others {
+        margin-top: 10px;
+        font-size: 0.8em;
+    }
+
+    #techs-front {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 350px;
+        float: left;
+        position: relative;
+        top: 10px;
+    }
+
+    .box-items-carousel {
+        position: relative;
+        width: 300px;
+        height: 150px;
+        line-height: 20px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .text-carousel {
+        float: right;
+        width: 80%;
+        color: white;
+        text-align: center;
+    }
+
+    .bot-down {
+        position: relative;
+        top: 150px;
+    }
+
+    .text-carousel-init {
+        position: relative;
+        top: 55px;
+        font-weight: bold;
+        width: 100%;
+        font-size: 28px;
+        color: white;
+        text-align: center;
+    }
+
     #cabecalho {
         width: 380px;
         position: relative;
